--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,6 +37,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+        pip install flake8  # Ensure flake8 is installed
 
     - name: Lint with flake8
       run: |
