--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,15 +37,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install flake8  # Ensure flake8 is installed
+        pip install pytest  # Ensure pytest is installed
 
     - name: Lint with flake8
       run: |
-        # STOP THE BUILD IF THERE ARE PYTHON SYNTAX ERRORS OR UNDEFINED NAMES
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # EXIT-ZERO TREATS ALL ERRORS AS WARNINGS. THE GITHUB EDITOR IS 127 CHARS WIDE
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Test with pytest
       run: |
-        pytest --verbose  # Add verbosity to pytest output if desired
+        python -m pytest --verbose  # Run pytest using Python module to avoid path issues
