--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,12 +37,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install pytest  # Ensure pytest is installed
+        pip install flake8  # Ensure flake8 is installed
 
     - name: Lint with flake8
       run: |
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        # Run flake8 using Python module to avoid PATH issues
+        python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Test with pytest
       run: |
