--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,11 +37,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        pip install flake8  # Ensure flake8 is installed
+        pip install flake8 pytest  # Ensure both flake8 and pytest are installed
 
     - name: Lint with flake8
       run: |
-        # Run flake8 using Python module to avoid PATH issues
         python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
