--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -33,11 +33,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Install dependencies
+    - name: Install project and dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
-        pip install flake8 pytest  # Ensure both flake8 and pytest are installed
+        pip install -e .[dev]  # INSTALL PROJECT AND DEV DEPENDENCIES
+        pip install flake8 pytest  # ENSURE BOTH flake8 AND pytest ARE INSTALLED
 
     - name: Lint with flake8
       run: |
@@ -46,4 +46,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        python -m pytest --verbose  # Run pytest using Python module to avoid path issues
+        python -m pytest --verbose  # RUN pytest USING PYTHON MODULE TO AVOID PATH ISSUES
