--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,12 @@ readme = "README.md"
 license = { file = "LICENSE" }
 changelog = "CHANGELOG.md"
 requires-python = ">=3.10.0"
-dependencies = ["keyboard>=0.13.5", "mouse>=0.7.1", "regex>=2023.10.3"]
+dependencies = [
+  "keyboard>=0.13.5",
+  "mouse>=0.7.1",
+  "pyperclip>=1.9.0",
+  "regex>=2023.10.3",
+]
 classifiers = [
   "Intended Audience :: Developers",
   "Programming Language :: Python :: 3",
@@ -71,4 +76,5 @@ packages = ["src/xulbux"]
 [tool.pytest.ini_options]
 minversion = "7.0"
 addopts = "-ra -q"
+pythonpath = ["src"]
 testpaths = ["tests/test_cmd_info.py", "tests/test_color_types.py"]
