--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,42 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
+name = "XulbuX"
+version = "1.5.6"
+authors = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
+description = "A library which includes a lot of really helpful functions."
+readme = "README.md"
+license = { file = "LICENSE" }
+changelog = "CHANGELOG.md"
+requires-python = ">=3.10.0"
+dependencies = [
+  "keyboard>=0.13.5",
+  "mouse>=0.7.1",
+  "pyperclip>=1.9.0",
+  "regex>=2023.10.3",
+]
+optional-dependencies = { dev = [
+  "pytest>=7.4.2",
+  "black>=23.7.0",
+  "isort>=5.12.0",
+  "flake8>=6.1.0",
+] }
+classifiers = [
+  "Intended Audience :: Developers",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+]
 keywords = [
   "xulbux",
   "python",
   "library",
   "utility",
   "helper",
-  "helpful",
   "functions",
   "tools",
   "classes",
@@ -32,30 +61,6 @@ keywords = [
   "operations",
   "presets",
 ]
-name = "XulbuX"
-version = "1.5.6"
-authors = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
-description = "A library which includes a lot of really helpful functions."
-readme = "README.md"
-license = { file = "LICENSE" }
-changelog = "CHANGELOG.md"
-requires-python = ">=3.10.0"
-dependencies = [
-  "keyboard>=0.13.5",
-  "mouse>=0.7.1",
-  "pyperclip>=1.9.0",
-  "regex>=2023.10.3",
-]
-classifiers = [
-  "Intended Audience :: Developers",
-  "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "License :: OSI Approved :: MIT License",
-  "Operating System :: OS Independent",
-  "Topic :: Software Development :: Libraries :: Python Modules",
-]
 
 [project.urls]
 "Homepage" = "https://github.com/XulbuX-dev/PythonLibraryXulbuX"
@@ -67,8 +72,39 @@ classifiers = [
 [project.scripts]
 xulbux-help = "__help__:help"
 
-[project.optional-dependencies]
-dev = ["pytest>=7.0"]
+[tool.black]
+line-length = 127
+target-version = ['py310', 'py311', 'py312']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 127
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+[tool.flake8]
+max-line-length = 127
+extend-ignore = ["E203", "E266", "E501", "W503"]
+max-complexity = 18
+select = ["B", "C", "E", "F", "W", "T4", "B9"]
+per-file-ignores = ["__init__.py:F401,F403"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/xulbux"]
