--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,7 +101,7 @@ ensure_newline_before_comments = true
 
 [tool.flake8]
 max-line-length = 127
-extend-ignore = ["E203", "E266", "E501", "W503"]
+extend-ignore = ["E203", "E266", "E501", "W503", "E303"]
 max-complexity = 18
 select = ["B", "C", "E", "F", "W", "T4", "B9"]
 per-file-ignores = ["__init__.py:F401,F403"]
