--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ xulbux-help = "XulbuX._cli_:help_command"
 
 [tool.black]
 line-length = 127
-target-version = ['py310', 'py311', 'py312']
+target-version = ['py310', 'py311', 'py312', 'py313']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
