--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,6 +117,7 @@ pythonpath = ["src"]
 testpaths = [
   "tests/test_cmd_info.py",
   "tests/test_color_types.py",
+  "tests/test_color.py",
   "tests/test_data.py",
   "tests/test_env_vars.py",
 ]
