--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ keywords = [
   "types",
   "methods",
   "cmd",
+  "console",
   "code",
   "color",
   "data",
@@ -117,7 +118,7 @@ minversion = "7.0"
 addopts = "-ra -q"
 pythonpath = ["src"]
 testpaths = [
-  "tests/test_cmd_info.py",
+  "tests/test_console_info.py",
   "tests/test_color_types.py",
   "tests/test_color.py",
   "tests/test_data.py",
