--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requires-python = ">=3.10.0"
 dependencies = [
   "keyboard>=0.13.5",
   "mouse>=0.7.1",
+  "prompt_toolkit>=3.0.41",
   "pyperclip>=1.9.0",
   "regex>=2023.10.3",
 ]
