--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,12 +37,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[dev]  # INSTALL PROJECT AND DEV DEPENDENCIES
-        pip install flake8 pytest  # ENSURE BOTH flake8 AND pytest ARE INSTALLED
+        pip install flake8 flake8-pyproject pytest  # ENSURE BOTH flake8 AND pytest ARE INSTALLED
 
     - name: Lint with flake8
       run: |
-        python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        python -m flake8 .
 
     - name: Test with pytest
       run: |
