--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ optional-dependencies = { dev = [
   "black>=23.7.0",
   "isort>=5.12.0",
   "flake8>=6.1.0",
+  "flake8-pyproject>=1.2.3",
 ] }
 classifiers = [
   "Intended Audience :: Developers",
@@ -105,7 +106,7 @@ ensure_newline_before_comments = true
 
 [tool.flake8]
 max-line-length = 127
-extend-ignore = ["E203", "E266", "E501", "W503", "E303"]
+extend-ignore = ["E203", "E266", "E303", "E501", "W503"]
 max-complexity = 18
 select = ["B", "C", "E", "F", "W", "T4", "B9"]
 per-file-ignores = ["__init__.py:F401,F403"]
