--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -41,7 +41,8 @@ jobs:
 
     - name: Lint with flake8
       run: |
-        python -m flake8 .
+        python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics  # RUN FLAKE8 FOR CRITICAL ERRORS ONLY
+        python -m flake8 . --exit-zero --max-complexity=10 --statistics  # RUN FLAKE8 FOR ALL ERRORS AND WARNINGS, BUT DON'T FAIL THE BUILD
 
     - name: Test with pytest
       run: |
