--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ ensure_newline_before_comments = true
 max-line-length = 127
 extend-ignore = ["E203", "E266", "E303", "E501", "W503"]
 max-complexity = 18
-select = ["B", "C", "E", "F", "W", "T4", "B9"]
+select = ["E", "F", "W", "C90"]
 per-file-ignores = ["__init__.py:F401,F403"]
 
 [tool.setuptools]
