--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,7 +108,7 @@ ensure_newline_before_comments = true
 max-complexity = 12
 max-line-length = 127
 select = ["E", "F", "W", "C90"]
-extend-ignore = ["E203", "E266", "E303", "E501", "W503"]
+extend-ignore = []
 per-file-ignores = ["__init__.py:F401,F403,F405"]
 
 [tool.setuptools]
