--- a/pyproject.toml
+++ b/pyproject.toml
@@ -108,8 +108,8 @@ ensure_newline_before_comments = true
 max-complexity = 12
 max-line-length = 127
 select = ["E", "F", "W", "C90"]
-extend-ignore = []
-per-file-ignores = ["__init__.py:F401,F403,F405"]
+extend-ignore = ["E203", "E266", "W503"]
+per-file-ignores = ["__init__.py:F405"]
 
 [tool.setuptools]
 packages = ["xulbux"]
