--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,7 +109,7 @@ max-complexity = 12
 max-line-length = 127
 select = ["E", "F", "W", "C90"]
 extend-ignore = ["E203", "E266", "W503"]
-per-file-ignores = ["__init__.py:F405"]
+per-file-ignores = ["__init__.py:F403,F405"]
 
 [tool.setuptools]
 packages = ["xulbux"]
