--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "xulbux"
 version = "1.6.6"
 authors = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
-description = "A library which includes a lot of really helpful functions."
+description = "A Python library which includes a lot of really helpful classes, types and functions."
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.10.0"
@@ -47,6 +47,7 @@ keywords = [
   "methods",
   "cmd",
   "console",
+  "constants",
   "code",
   "color",
   "data",
