--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "xulbux"
 version = "1.6.6"
 authors = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
-description = "A Python library which includes a lot of really helpful classes, types and functions."
+description = "A Python library which includes lots of helpful classes, types and functions aiming to make common programming tasks simpler."
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.10.0"
