--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,34 +35,64 @@ classifiers = [
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 keywords = [
-  "xulbux",
-  "python",
-  "library",
-  "utility",
-  "helper",
-  "functions",
-  "tools",
+  "args",
+  "arguments",
+  "attributes",
   "classes",
-  "types",
-  "methods",
   "cmd",
-  "console",
-  "constants",
+  "client",
   "code",
+  "codes",
   "color",
+  "commands",
+  "console",
+  "consts",
+  "constants",
+  "convert",
+  "conversion",
   "data",
-  "structures",
+  "debug",
+  "easier",
   "env",
   "environment",
+  "error",
   "file",
   "format",
+  "formatting",
+  "functions",
+  "helper",
+  "hex",
+  "hexa",
+  "hsl",
+  "hsla",
+  "info",
+  "input",
   "json",
-  "path",
-  "regex",
-  "string",
-  "system",
+  "library",
+  "log",
+  "logging",
+  "methods",
+  "nice",
   "operations",
+  "path",
   "presets",
+  "pretty",
+  "printing",
+  "properties",
+  "python",
+  "re",
+  "regex",
+  "rgb",
+  "rgba",
+  "string",
+  "structures",
+  "system",
+  "tools",
+  "types",
+  "utility",
+  "warn",
+  "warning",
+  "xulbux",
 ]
 
 [project.urls]
