--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,15 @@ build-backend = "setuptools.build_meta"
 name = "xulbux"
 version = "1.8.0"
 authors = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
+maintainers = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
 description = "A Python library which includes lots of helpful classes, types and functions aiming to make common programming tasks simpler."
 readme = "README.md"
 license = "MIT"
-license-files = ["LICENSE"]
+license-files = ["LICEN[CS]E.*"]
 requires-python = ">=3.10.0"
 dependencies = [
   "keyboard>=0.13.5",
-  "mouse>=0.7.1",
   "prompt_toolkit>=3.0.41",
-  "pyperclip>=1.9.0",
   "regex>=2023.10.3",
 ]
 optional-dependencies = { dev = [
@@ -26,7 +25,7 @@ optional-dependencies = { dev = [
   "pytest>=7.4.2",
 ] }
 classifiers = [
-  "Programming Language :: Python :: 3",
+  "Development Status :: 5 - Production/Stable",
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.11",
@@ -102,11 +101,10 @@ keywords = [
 "Source Code" = "https://github.com/XulbuX/PythonLibraryXulbuX/tree/main/src"
 "Changelog" = "https://github.com/XulbuX/PythonLibraryXulbuX/blob/main/CHANGELOG.md"
 "Bug Reports" = "https://github.com/XulbuX/PythonLibraryXulbuX/issues"
+"Stats" = "https://clickpy.clickhouse.com/dashboard/xulbux"
 "License" = "https://github.com/XulbuX/PythonLibraryXulbuX/blob/main/LICENSE"
 
-
 [project.scripts]
-xx-help = "xulbux._cli_:help_command"
 xulbux-help = "xulbux._cli_:help_command"
 
 [tool.black]
