--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,8 +143,10 @@ extend-ignore = ["E203", "E266", "W503"]
 per-file-ignores = ["__init__.py:F403,F405"]
 
 [tool.setuptools]
-packages = ["xulbux"]
 package-dir = { "" = "src" }
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.pytest.ini_options]
 minversion = "7.0"
