--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "xulbux"
 version = "1.9.2"
 authors = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
 maintainers = [{ name = "XulbuX", email = "xulbux.real@gmail.com" }]
-description = "A Python library which includes lots of helpful classes, types, and functions aiming to make common programming tasks simpler."
+description = "A Python library to simplify common programming tasks."
 readme = "README.md"
 license = "MIT"
 license-files = ["LICEN[CS]E.*"]
