--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ license-files = ["LICEN[CS]E.*"]
 requires-python = ">=3.10.0"
 dependencies = [
   "keyboard>=0.13.5",
+  "mypy-extensions>=1.1.0",
   "prompt_toolkit>=3.0.41",
   "regex>=2023.10.3",
 ]
