--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = [
   "setuptools>=80.0.0",
   "wheel>=0.45.0",
   "mypy>=1.19.0",
+  "mypy-extensions>=1.1.0",
   # TYPES FOR MyPy
   "types-regex",
   "types-keyboard",
