add workflow permissions and description

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,4 +1,8 @@
+# THIS WORKFLOW WILL BUILD THE LIBRARY FOR DIFFERENT OSes AND PUBLISH THE BUILDS TO PYPI
+
 name: Build and Publish to PyPI
+permissions:
+  contents: read
 
 on:
   push:
